# src/controllers/categories.js
@@ -1,19 +1,11 @@
-import createHttpError from 'http-errors';
+import { getAllCategories } from '../services/categories.js';
 
-import { getCategoryById } from '../services/categories.js';
-
-export const getCategoryByIdController = async (req, res, next) => {
-  const { categoryId } = req.params;
-
-  const category = await getCategoryById(categoryId);
-
-  if (!category) {
-    throw createHttpError(404, `Category with ID ${categoryId} not found!`);
-  }
+export const getAllCategoriesController = async (req, res, next) => {
+  const categories = await getAllCategories();
 
   res.status(200).json({
     status: 200,
-    message: `Successfully found category with ID ${categoryId}!`,
-    data: category,
+    message: 'Successfully found all categories!',
+    categories,
   });
 };
